@@ -9,14 +9,25 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    mockitoAgent {
+        transitive = false
+    }
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.mockito:mockito-core:5.18.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
+    mockitoAgent('org.mockito:mockito-core:5.18.0')
 }
 
 test {
     useJUnitPlatform()
+}
+
+tasks.named('test') {
+    jvmArgs(['-XX:+EnableDynamicAgentLoading', '-Xshare:off'])
 }
